<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Plan My Meal</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="icon_heart">&#xf004;</string>
    <string name="icon_play">&#xf04b;</string>
    <string name="icon_edit">&#xf044;</string>
    <string name="icon_delete">&#xf014;</string>
    <string name="icon_meal">&#xf0f5;</string>
    <string name="icon_recipe">&#xf022;</string>
    <string name="title_activity_cook">CookActivity</string>
    <string name="title_activity_edit_meal">EditMealActivity</string>
    <string name="title_activity_edit_recipe">Edit Recipe</string>
    <string name="title_activity_community_cookbook">CommunityCookbookActivity</string>

    <string name="action_community_cookbook">Community Cookbook</string>
    <string name="action_new_recipe">New Recipe</string>
    <string name="action_new_meal">New Meal</string>
    
    <string-array name="tags_array">
        <item>Spicy</item>
        <item>Smooth</item>
        <item>Saucy</item>
    </string-array>

    <string name="title_meal_list">Meals</string>
    <string name="title_meal_detail">Meal Detail</string>
    
    <string-array name="settings_cooking_alerts_next_step_reminder_time">
        <item>15 sec</item>
        <item>30 sec</item>
        <item>1 min</item>
    </string-array>
    <string name="settings_cooking_alerts_next_step_reminder_time_text"> Next Step Remainder Time </string>
    <string-array name="reminder_alarm_type">
        <item>Sound 1</item>
        <item>Sound 2</item>
        <item>Sound 3</item>
        
        </string-array>
    <string-array name="start_step_alarm_type">
        <item>Sound 1</item>
        <item>Sound 2</item>
        <item>Sound 3</item>
        
        </string-array>
    <string-array name="number_appliances"><item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="number_burners"><item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
        <string name="title_activity_new_meal"></string>

</resources>
